All examples working

--- a/examples/fraud_detection/run.ipynb
+++ b/examples/fraud_detection/run.ipynb
@@ -49,64 +49,9 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: xgboost in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (1.7.3)\n",
-      "Requirement already satisfied: streamlit in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (1.18.1)\n",
-      "Requirement already satisfied: scipy in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages/scipy-1.10.0-py3.10-macosx-11.1-arm64.egg (from xgboost) (1.10.0)\n",
-      "Requirement already satisfied: numpy in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages/numpy-1.23.5-py3.10-macosx-11.1-arm64.egg (from xgboost) (1.23.5)\n",
-      "Requirement already satisfied: click>=7.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (8.1.3)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (9.4.0)\n",
-      "Requirement already satisfied: cachetools>=4.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (5.3.0)\n",
-      "Requirement already satisfied: validators>=0.2 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (0.20.0)\n",
-      "Requirement already satisfied: semver in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (2.13.0)\n",
-      "Requirement already satisfied: toml in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (0.10.2)\n",
-      "Requirement already satisfied: packaging>=14.1 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (23.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.10.0.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages/typing_extensions-4.4.0-py3.10.egg (from streamlit) (4.4.0)\n",
-      "Requirement already satisfied: altair>=3.2.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (4.2.2)\n",
-      "Requirement already satisfied: python-dateutil in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages/python_dateutil-2.8.2-py3.10.egg (from streamlit) (2.8.2)\n",
-      "Requirement already satisfied: pympler>=0.9 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (1.0.1)\n",
-      "Requirement already satisfied: tzlocal>=1.1 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (4.2)\n",
-      "Requirement already satisfied: pyarrow>=4.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (11.0.0)\n",
-      "Requirement already satisfied: pydeck>=0.1.dev5 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (0.8.0)\n",
-      "Requirement already satisfied: tornado>=6.0.3 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (6.2)\n",
-      "Requirement already satisfied: gitpython!=3.1.19 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (3.1.30)\n",
-      "Requirement already satisfied: requests>=2.4 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (2.28.2)\n",
-      "Requirement already satisfied: pandas>=0.25 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages/pandas-1.5.3-py3.10-macosx-11.1-arm64.egg (from streamlit) (1.5.3)\n",
-      "Requirement already satisfied: blinker>=1.0.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (1.5)\n",
-      "Requirement already satisfied: importlib-metadata>=1.4 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (6.0.0)\n",
-      "Requirement already satisfied: protobuf<4,>=3.12 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (3.20.3)\n",
-      "Requirement already satisfied: rich>=10.11.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from streamlit) (13.3.1)\n",
-      "Requirement already satisfied: entrypoints in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from altair>=3.2.0->streamlit) (0.4)\n",
-      "Requirement already satisfied: jsonschema>=3.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from altair>=3.2.0->streamlit) (4.17.3)\n",
-      "Requirement already satisfied: toolz in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from altair>=3.2.0->streamlit) (0.12.0)\n",
-      "Requirement already satisfied: jinja2 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from altair>=3.2.0->streamlit) (3.1.2)\n",
-      "Requirement already satisfied: gitdb<5,>=4.0.1 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from gitpython!=3.1.19->streamlit) (4.0.10)\n",
-      "Requirement already satisfied: zipp>=0.5 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from importlib-metadata>=1.4->streamlit) (3.13.0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages/pytz-2022.7.1-py3.10.egg (from pandas>=0.25->streamlit) (2022.7.1)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages/six-1.16.0-py3.10.egg (from python-dateutil->streamlit) (1.16.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from requests>=2.4->streamlit) (2022.12.7)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from requests>=2.4->streamlit) (3.4)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from requests>=2.4->streamlit) (3.0.1)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from requests>=2.4->streamlit) (1.26.14)\n",
-      "Requirement already satisfied: pygments<3.0.0,>=2.14.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from rich>=10.11.0->streamlit) (2.14.0)\n",
-      "Requirement already satisfied: markdown-it-py<3.0.0,>=2.1.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from rich>=10.11.0->streamlit) (2.1.0)\n",
-      "Requirement already satisfied: pytz-deprecation-shim in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from tzlocal>=1.1->streamlit) (0.1.0.post0)\n",
-      "Requirement already satisfied: decorator>=3.4.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from validators>=0.2->streamlit) (5.1.1)\n",
-      "Requirement already satisfied: smmap<6,>=3.0.1 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from gitdb<5,>=4.0.1->gitpython!=3.1.19->streamlit) (5.0.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from jinja2->altair>=3.2.0->streamlit) (2.1.2)\n",
-      "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from jsonschema>=3.0->altair>=3.2.0->streamlit) (0.19.3)\n",
-      "Requirement already satisfied: attrs>=17.4.0 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from jsonschema>=3.0->altair>=3.2.0->streamlit) (22.2.0)\n",
-      "Requirement already satisfied: mdurl~=0.1 in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from markdown-it-py<3.0.0,>=2.1.0->rich>=10.11.0->streamlit) (0.1.2)\n",
-      "Requirement already satisfied: tzdata in /Users/sourabhagrawal/miniconda3/envs/prod_dev/lib/python3.10/site-packages (from pytz-deprecation-shim->tzlocal>=1.1->streamlit) (2022.7)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install xgboost streamlit"
+    "# !pip install xgboost streamlit"
    ]
   },
   {
@@ -564,14 +509,9 @@
       "\n",
       "  You can now view your Streamlit app in your browser.\n",
       "\n",
-      "  Local URL: http://localhost:8501\n",
-      "  Network URL: http://192.168.6.92:8501\n",
+      "  Local URL: http://localhost:8502\n",
+      "  Network URL: http://192.168.6.64:8502\n",
       "\n",
-      "  For better performance, install the Watchdog module:\n",
-      "\n",
-      "  $ xcode-select --install\n",
-      "  $ pip install watchdog\n",
-      "            \n",
       "Drift detected with DDM at time: 111298!!!\n"
      ]
     }
@@ -584,8 +524,8 @@
     "for i in range(int(len(X_test)/batch_size)):\n",
     "    \n",
     "    # Do model prediction\n",
-    "    inputs = {'data': {\"feats\": X_test[i*batch_size:(i+1)*batch_size]}}\n",
-    "    preds = classifier.predict(inputs['data'][\"feats\"])\n",
+    "    inputs = {\"feats\": X_test[i*batch_size:(i+1)*batch_size]}\n",
+    "    preds = classifier.predict(inputs[\"feats\"])\n",
     "    \n",
     "    # Log model inputs and outputs to monitor concept drift\n",
     "    ids = framework.log(inputs=inputs, outputs=preds)\n",
@@ -659,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "1322464e-0917-4f68-aa4c-214a9b6fa7c2",
    "metadata": {
     "tags": []
@@ -673,11 +613,15 @@
       "\t- type:\n",
       "\t\tAnomaly.CUSTOM_MONITOR\n",
       "\t- initialize_func:\n",
-      "\t\t<function custom_initialize_func at 0x17882f490>\n",
+      "\t\t<function custom_initialize_func at 0x7f9e608f65f0>\n",
       "\t- check_func:\n",
-      "\t\t<function custom_check_func at 0x17882e290>\n",
+      "\t\t<function custom_check_func at 0x7f9e608f71c0>\n",
       "\t- need_gt:\n",
       "\t\tTrue\n",
+      "\t- type:\n",
+      "\t\tAnomaly.CONCEPT_DRIFT\n",
+      "\t- algorithm:\n",
+      "\t\tDataDriftAlgo.DDM\n",
       "- retraining_folder:\n",
       "\tuptrain_smart_data\n",
       "- st_logging:\n",
@@ -734,13 +678,20 @@
     "                self.is_drift_detected = True\n",
     "\n",
     "cfg = {\n",
-    "    # Checks for our custom monitor\n",
-    "    \"checks\": [{\n",
-    "        'type': uptrain.Anomaly.CUSTOM_MONITOR,\n",
-    "        'initialize_func': custom_initialize_func,\n",
-    "        'check_func': custom_check_func,\n",
-    "        'need_gt': True,\n",
-    "    }],\n",
+    "    \"checks\": [\n",
+    "        {\n",
+    "            # Check for our custom monitor\n",
+    "            'type': uptrain.Anomaly.CUSTOM_MONITOR,\n",
+    "            'initialize_func': custom_initialize_func,\n",
+    "            'check_func': custom_check_func,\n",
+    "            'need_gt': True,\n",
+    "        },\n",
+    "        {\n",
+    "            # Additionally check for our concept drift from above\n",
+    "            'type': uptrain.Anomaly.CONCEPT_DRIFT,\n",
+    "            'algorithm': uptrain.DataDriftAlgo.DDM\n",
+    "        }\n",
+    "    ],\n",
     "    \n",
     "    # Folder that stores the drifted data-points identified by UpTrain\n",
     "    \"retraining_folder\": 'uptrain_smart_data',\n",
@@ -753,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "63118254-37a2-4ec0-9a9d-16a4c3e376d1",
    "metadata": {
     "tags": []
@@ -765,7 +716,8 @@
      "text": [
       "Deleting the folder:  uptrain_smart_data\n",
       "Deleting the folder:  uptrain_logs\n",
-      "Concept drift detected with custom metric at time: 111000!!!\n"
+      "Concept drift detected with custom metric at time: 111000!!!\n",
+      "Drift detected with DDM at time: 111298!!!\n"
      ]
     }
    ],
@@ -777,8 +729,8 @@
     "for i in range(int(len(X_test)/batch_size)):\n",
     "    \n",
     "    # Do model prediction\n",
-    "    inputs = {'data': {\"feats\": X_test[i*batch_size:(i+1)*batch_size]}}\n",
-    "    preds = classifier.predict(inputs['data'][\"feats\"])\n",
+    "    inputs = {\"feats\": X_test[i*batch_size:(i+1)*batch_size]}\n",
+    "    preds = classifier.predict(inputs[\"feats\"])\n",
     "    \n",
     "    # Log model inputs and outputs to monitor concept drift\n",
     "    ids = framework.log(inputs=inputs, outputs=preds)\n",
@@ -828,7 +780,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflow_env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
