--- a/examples/llm_bert/run.ipynb
+++ b/examples/llm_bert/run.ipynb
@@ -41,7 +41,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install torch transformers[torch] datasets ipywidgets nltk uptrain"
+    "# !pip install torch transformers[torch] datasets ipywidgets nltk uptrain"
    ]
   },
   {
@@ -196,7 +196,7 @@
     "    all_data = json.load(f)\n",
     "\n",
     "for sample in all_data['data']:\n",
-    "    inputs = {'data': {'text': [sample['text']]}}\n",
+    "    inputs = {'text': [sample['text']]}\n",
     "    framework.log(inputs = inputs, outputs = None)"
    ]
   },
@@ -531,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
