--- a/examples/shopping_cart_recommendation/run.ipynb
+++ b/examples/shopping_cart_recommendation/run.ipynb
@@ -290,7 +290,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleting the folder:  uptrain_smart_data\n"
+      "Deleting the folder:  uptrain_smart_data\n",
+      "Deleting the folder:  uptrain_logs\n"
      ]
     }
    ],
@@ -348,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "27f9dccc-2710-4253-a98b-4b390378cc85",
    "metadata": {},
    "outputs": [
@@ -359,8 +360,8 @@
       "\n",
       "  You can now view your Streamlit app in your browser.\n",
       "\n",
-      "  Local URL: http://localhost:8501\n",
-      "  Network URL: http://192.168.6.64:8501\n",
+      "  Local URL: http://localhost:8504\n",
+      "  Network URL: http://192.168.6.64:8504\n",
       "\n"
      ]
     }
@@ -368,10 +369,10 @@
    "source": [
     "for i in range(int(len(x_test)/inference_batch_size)):\n",
     "    # Define input in the format understood by the UpTrain framework\n",
-    "    inputs = {'data': {\"feats\": x_test[i*inference_batch_size:(i+1)*inference_batch_size]}}\n",
+    "    inputs = {\"feats\": x_test[i*inference_batch_size:(i+1)*inference_batch_size]}\n",
     "    \n",
     "    # Do model prediction\n",
-    "    preds = model_predict(model, inputs['data']['feats'])\n",
+    "    preds = model_predict(model, inputs['feats'])\n",
     "\n",
     "    # Log input and output to framework\n",
     "    ids = framework.log(inputs=inputs, outputs=preds)\n",
