--- a/examples/text_summarization/run.ipynb
+++ b/examples/text_summarization/run.ipynb
@@ -63,7 +63,17 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package vader_lexicon to\n",
+      "[nltk_data]     /Users/vipul/nltk_data...\n",
+      "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM\n",
@@ -131,8 +141,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Found cached dataset billsum (/Users/sourabhagrawal/.cache/huggingface/datasets/billsum/default/3.0.0/75cf1719d38d6553aa0e0714c393c74579b083ae6e164b2543684e3e92e0c4cc)\n",
-      "Loading cached processed dataset at /Users/sourabhagrawal/.cache/huggingface/datasets/billsum/default/3.0.0/75cf1719d38d6553aa0e0714c393c74579b083ae6e164b2543684e3e92e0c4cc/cache-ffec138f9e7fd5cf.arrow\n"
+      "Using custom data configuration default\n",
+      "Found cached dataset billsum (/Users/vipul/.cache/huggingface/datasets/billsum/default/3.0.0/75cf1719d38d6553aa0e0714c393c74579b083ae6e164b2543684e3e92e0c4cc)\n",
+      "Loading cached processed dataset at /Users/vipul/.cache/huggingface/datasets/billsum/default/3.0.0/75cf1719d38d6553aa0e0714c393c74579b083ae6e164b2543684e3e92e0c4cc/cache-10b05b1614ccfdc2.arrow\n"
      ]
     },
     {
@@ -184,24 +195,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting to download wikihowAll.csv\n",
-      "Successfully installed wget\n",
-      "Data downloaded\n",
-      "Prepared Wikihow Dataset\n"
+      "wikihowAll.csv already present\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using custom data configuration default-74664f2ff2d24c20\n",
-      "Found cached dataset csv (/Users/sourabhagrawal/.cache/huggingface/datasets/csv/default-74664f2ff2d24c20/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317)\n"
+      "Using custom data configuration default-284c260ed8a36aaa\n",
+      "Found cached dataset csv (/Users/vipul/.cache/huggingface/datasets/csv/default-284c260ed8a36aaa/0.0.0/652c3096f041ee27b04d2232d41f10547a8fecda3e284a79a0ec4053c916ef7a)\n"
      ]
     },
     {
      "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.017478227615356445,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": 15,
+       "postfix": null,
+       "prefix": "",
+       "rate": null,
+       "total": 1,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "347f84361ff84e20abadce7ff65e8fef",
+       "model_id": "b05ff705f6a94134a2c7fde9d2971d30",
        "version_major": 2,
        "version_minor": 0
       },
@@ -216,7 +241,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading cached processed dataset at /Users/sourabhagrawal/.cache/huggingface/datasets/csv/default-74664f2ff2d24c20/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317/cache-841d74d37d757b40.arrow\n"
+      "Loading cached processed dataset at /Users/vipul/.cache/huggingface/datasets/csv/default-284c260ed8a36aaa/0.0.0/652c3096f041ee27b04d2232d41f10547a8fecda3e284a79a0ec4053c916ef7a/cache-09b0b890dc34f8fe.arrow\n"
      ]
     },
     {
@@ -265,8 +290,25 @@
    "outputs": [
     {
      "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.010022163391113281,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": 15,
+       "postfix": null,
+       "prefix": "Flattening the indices",
+       "rate": null,
+       "total": 1,
+       "unit": "ba",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dcbc121219af47a1a99bffd31f9d2275",
+       "model_id": "e194e6d8ec624ef68a46783943e7f81c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -314,8 +356,25 @@
    "outputs": [
     {
      "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.013293027877807617,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": 15,
+       "postfix": null,
+       "prefix": "",
+       "rate": null,
+       "total": 1,
+       "unit": "ba",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d517a34aebf489d9ad07c3bfa1b1afb",
+       "model_id": "a9cc172d342641548bb671a583f4f2d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -330,9 +389,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'model_input_text_to_summarize': \" She smiles and stuff. Don't be afraid to laugh loudly. Misa is loud, and rude sometimes! Speak your mind.\\n\\n, So if you have a boyfriend, do the same. Be faithful. But in the beginning, when she contacts Kira, she is border lining stalker-esque. Don't do this. Do not stalk people who catch your interest or you admire. You could get a restraining order.\\n\\n, She doesn't walk with her head down. She isn't afraid of anyone. Don't fear yourself or anyone else. Just be who you are and shun all who tell you otherwise!\\n\\n, Misa wears A LOT of accessories, be it chains, skulls, necklaces, or zippers; just be sure not to overdo it...\\n\\n\"} \n",
+      "{'model_input_text_to_summarize': ' Be aware that the wipe or washcloth should not be dripping wet, but dampened enough to remove dirt and grime. Make sure that you get into all of the cracks and corners.;\\n, Gently rub it over the keyboard. If you do not have a vacuum cleaner or a small attachment, then you can use a Q-tip and rub it in and out of the cracks of your keyboard to remove dust. Another great way is to use and old toothbrush or paint brush instead of a Q-Tip because they both can clean better.\\n\\n, This will make your keyboard smell great while your typing and it lasts a very long time.\\n\\n'} \n",
       "\n",
-      "{'model_output_summary': [\"Misa is border lining stalker-esque. she doesn't walk with her\"]}\n"
+      "{'model_output_summary': ['wipe or washcloth should not be wet, but dampened enough to remove dirt and grim']}\n"
      ]
     }
    ],
@@ -376,22 +435,6 @@
     "tags": []
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generated bert embeddings for 0 training samples\n",
-      "Generated bert embeddings for 100 training samples\n",
-      "Generated bert embeddings for 200 training samples\n",
-      "Generated bert embeddings for 300 training samples\n",
-      "Generated bert embeddings for 400 training samples\n",
-      "Generated bert embeddings for 500 training samples\n",
-      "Generated bert embeddings for 600 training samples\n",
-      "Generated bert embeddings for 700 training samples\n",
-      "Generated bert embeddings for 800 training samples\n",
-      "Generated bert embeddings for 900 training samples\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -474,27 +517,17 @@
       "\n",
       "  You can now view your Streamlit app in your browser.\n",
       "\n",
-      "  Local URL: http://localhost:8502\n",
-      "  Network URL: http://192.168.6.92:8502\n",
+      "  Local URL: http://localhost:8503\n",
+      "  Network URL: http://192.168.6.64:8503\n",
       "\n",
-      "  For better performance, install the Watchdog module:\n",
       "\n",
-      "  $ xcode-select --install\n",
-      "  $ pip install watchdog\n",
-      "            \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "OMP: Info #276: omp_set_nested routine deprecated, please use omp_set_max_active_levels instead.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "  A new version of Streamlit is available.\n",
+      "\n",
+      "  See what's new at https://discuss.streamlit.io/c/announcements\n",
+      "\n",
+      "  Enter the following command to upgrade:\n",
+      "  $ pip install streamlit --upgrade\n",
+      "\n",
       "100\n",
       "200\n",
       "300\n",
@@ -531,11 +564,9 @@
     "    all_bert_embs.append(bert_embs)\n",
     "\n",
     "    inputs = {\n",
-    "        \"data\": {\n",
-    "            \"text\": this_batch,\n",
-    "            \"bert_embs\": bert_embs,\n",
-    "            \"dataset_label\": final_test_dataset[idx*batch_size: (idx+1)*batch_size]['dataset_label']\n",
-    "        }\n",
+    "        \"text\": this_batch,\n",
+    "        \"bert_embs\": bert_embs,\n",
+    "        \"dataset_label\": final_test_dataset[idx*batch_size: (idx+1)*batch_size]['dataset_label']\n",
     "    }\n",
     "\n",
     "    idens = framework.log(inputs=inputs, outputs=summaries)"
@@ -641,18 +672,17 @@
     {
      "data": {
       "text/plain": [
-       "['\"\\'exploits\\' are a way to increase hip-fire accuracy. \\'\"',\n",
-       " '\"the egg is cooled by hand and taps each end on a hard surface.\"',\n",
+       "['\",,,,,,,,,,,,,,,,,,\"',\n",
+       " '\"call and response is popular in jazz improvisation. it can be used within your own solo\"',\n",
+       " '\"make 3 piatas. make just a roof to attach the pi\"',\n",
+       " '\",,,,,,,,,,,,,,,,,,\"',\n",
+       " '\",,,,,,,,,,,,,,,,,,\"',\n",
        " '\",,,,,,,,,,,,,,,,,,,\"',\n",
-       " '\"julian zelizer: you may be able to talk about abuse with someone you\"',\n",
        " '\",,,,,,,,,,,,,,,,,,\"',\n",
-       " '\"asbestos was molded into many different shapes and sizes to fill different needs.\"',\n",
-       " '\"sexual abstinence can involve kissing, embracing, erotic touching, for\"',\n",
-       " '\"children often get upset when they are injured. they are crying significantly more than a normal\"',\n",
-       " '\"bacteria from a throat infection can spread to the fluid in your middle ear. symptoms\"',\n",
-       " '\"\\\\\"to me\\\\\" (indirect pronoun) should come first, then \\\\\"it\\\\\"\"',\n",
        " '\",,,,,,,,,,,,,,,,,,\"',\n",
-       " '\",,,,,,,,,,,,,,,,,,,\"']"
+       " '\",,,,,,,,,,,,,,,,,,\"',\n",
+       " '\"tea tree oil is a natural antiseptic. shampoos with at least 5%\"',\n",
+       " '\"you can measure your dog at home without your dog being present. a measuring tape will\"']"
       ]
      },
      "execution_count": 12,
@@ -670,11 +700,9 @@
     "    summaries = all_summaries[idx]\n",
     "    bert_embs = all_bert_embs[idx]\n",
     "    inputs = {\n",
-    "        \"data\": {\n",
-    "            \"text\": this_batch,\n",
-    "            \"bert_embs_downsampled\": downsample_embs(bert_embs),\n",
-    "            \"dataset_label\": final_test_dataset[idx*batch_size: (idx+1)*batch_size]['dataset_label']\n",
-    "        }\n",
+    "        \"text\": this_batch,\n",
+    "        \"bert_embs_downsampled\": downsample_embs(bert_embs),\n",
+    "        \"dataset_label\": final_test_dataset[idx*batch_size: (idx+1)*batch_size]['dataset_label']\n",
     "    }\n",
     "    \n",
     "    idens = framework.log(inputs=inputs, outputs=summaries)\n",
@@ -822,28 +850,26 @@
     {
      "data": {
       "text/plain": [
-       "(['\",,,,,,,,,,,,,,,,,,\"',\n",
+       "(['\",,,,,,,,,, \"',\n",
+       "  '\",,,,,,,,,,,,,,,,,,\"',\n",
+       "  '\",,,,,,,,,,,,,,,,,,\"',\n",
+       "  '\",,,,,,,,,,,,,,,,,,\"',\n",
+       "  '\",,,,,, Allow it to thicken. this will take about 1\"',\n",
        "  '\",,,,,,,,,,,,,,,,,,,\"',\n",
        "  '\",,,,,,,,,,,,,,,,,,\"',\n",
-       "  '\",,,,,,,,,,\"',\n",
-       "  '\",,, and you are ready to eat.\"',\n",
        "  '\",,,,,,,,,,,,,,,,,,\"',\n",
-       "  '\",,,,,,,,,,\"',\n",
-       "  '\",,,,,,,,,, \"',\n",
-       "  '\",,,,,,,,,, \"',\n",
        "  '\",,,,,,,,,,,,,,,,,,\"',\n",
-       "  '\",,,,,,,,,,,,,,,,,,,\"'],\n",
-       " ['\"summarize: ;\\\\n, (For Windows user, right click on the photo >> Open with >> Select Photoshop.)\\\\n\\\\n, Commonly it is in the left side of your screen on the tools window.\\\\n\\\\n,,, Re-position your text if you want.\\\\n\\\\n, You can change font style, font color, font size etc. there. In order to format your text, you\\'ll need to highlight it before making your desired changes.\\\\n\\\\n, Select the location on your drive where you want to save the photo. Now give a sweet name to your photo. Choose the file format from the dropdown list and click on save. Your new photo with text is saved in that location.\\\\n\\\\n,\"',\n",
-       "  '\"summarize: ,,,, Stir well after adding each spoon.\\\\n\\\\n,\"',\n",
-       "  '\"summarize: ;\\\\n,,,,,,,,,,,,,\"',\n",
-       "  '\"summarize: ,,,\"',\n",
-       "  '\"summarize: ;\\\\n,, (optional)\\\\n\\\\n,,, And you are ready to eat.\\\\n\\\\n,\"',\n",
+       "  '\",,,,,,,,.. Now you can enjoy your movies\"'],\n",
+       " ['\"summarize: ,,,,,\"',\n",
+       "  '\"summarize: ;\\\\n,,,,,,\"',\n",
+       "  '\"summarize: ;\\\\n,,,,,,,\"',\n",
+       "  '\"summarize: ;\\\\n,,,,,,,,\"',\n",
+       "  '\"summarize: ;\\\\n,,,,, Allow it to thicken. This will take about 1 - 2 minutes.\\\\n\\\\n,, Using a thick makeup brush or your fingertips, spread the mixture over your face. Only make a thin layer.\\\\n\\\\n, Leave for approx 5 to 10 minutes.\\\\n\\\\n,, Pat dry and moisturize.\\\\n\\\\n\"',\n",
+       "  '\"summarize: ,,,,,,,,,,,,,,,,,,,,,\"',\n",
+       "  '\"summarize: ;\\\\n,,,,,,,,,,, And now you\\'re done.\\\\n\\\\n\"',\n",
        "  '\"summarize: ;\\\\n,,,,,\"',\n",
-       "  '\"summarize: ;\\\\n,\\\\n\\\\n,,,\\\\n\\\\n,\"',\n",
-       "  '\"summarize: ;\\\\n,,,,\"',\n",
-       "  '\"summarize: ,,,,,\"',\n",
-       "  '\"summarize: ,,,,,,,,, (Balls are in Entities tab)\\\\n\\\\n,,\"',\n",
-       "  '\"summarize: ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,\"'])"
+       "  '\"summarize: ;\\\\n,,,,,,,\"',\n",
+       "  '\"summarize: ;\\\\n,,, Try not to miss any bits!!!\\\\n\\\\n,, Now you can enjoy your movies with a slightly clearer and better picture.\\\\n\\\\n\"'])"
       ]
      },
      "execution_count": 14,
@@ -860,10 +886,8 @@
     "    this_batch = [prefix + doc for doc in final_test_dataset[idx*batch_size: (idx+1)*batch_size]['text'] if doc is not None]\n",
     "    summaries = all_summaries[idx]\n",
     "    inputs = {\n",
-    "        \"data\": {\n",
-    "            \"text\": this_batch,\n",
-    "            \"dataset_label\": final_test_dataset[idx*batch_size: (idx+1)*batch_size]['dataset_label']\n",
-    "        }\n",
+    "        \"text\": this_batch,\n",
+    "        \"dataset_label\": final_test_dataset[idx*batch_size: (idx+1)*batch_size]['dataset_label']\n",
     "    }\n",
     "\n",
     "    idens = framework.log(inputs=inputs, outputs=summaries)\n",
@@ -879,14 +903,6 @@
    "source": [
     "In this example, we saw how to identify distribution shifts in Natural language related tasks by taking advantage of text embeddings "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34518570-964b-4db0-a42b-fea60c770a69",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -905,7 +921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
